example/argocd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: private-ingress-v2.example.com
spec:
  rules:
    - host: argocd.example.com
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  labels:
    kubernetes.io/ingress.class: example-private-v2
spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`argocd.example.com`)
      services:
        - kind: Service
          name: argocd-server
          port: 80
  tls: {}
